# symmetrical-octo-barnacle

./: .gitignore  main.py  pyproject.toml
.github/actions/build-package/: action.yml
.github/actions/create-release/: action.yml
.github/workflows/: cut_version.yml
doc/: news_version_template.rst
